--- a/app/styles/detail.css
+++ b/app/styles/detail.css
@@ -1,5 +1,4 @@
-.org-name {
-    font-family: 'Yuanti SC', 'Lantinghei SC';
+.date {
     font-weight: 100;
     margin-top: 0;
     text-shadow: 1px 1px 2px #444;
